syntax = "proto3";

import "AbilityControlBlock.proto";
import "AbilitySyncStateInfo.proto";
import "AvatarInfo.proto";
import "SceneAvatarInfo.proto";
import "SceneEntityInfo.proto";
import "ServerBuff.proto";

option java_package = "org.sorapointa.proto";

message SceneTeamAvatar {
  SceneAvatarInfo scene_avatar_info = 14;
  AvatarInfo avatar_info = 15;
  uint32 entity_id = 10;
  AbilitySyncStateInfo weapon_ability_info = 6;
  AbilityControlBlock ability_control_block = 2;
  bool is_reconnect = 8;
  AbilitySyncStateInfo avatar_ability_info = 4;
  uint64 weapon_guid = 12;
  uint32 player_uid = 1;
  SceneEntityInfo scene_entity_info = 11;
  uint32 weapon_entity_id = 5;
  uint32 scene_id = 9;
  bool is_on_scene = 625;
  uint64 avatar_guid = 3;
  bool is_player_cur_avatar = 13;
  repeated ServerBuff server_buff_list = 7;
}
